--- a/quiz/src/main/res/layout/item_answer_cloze.xml
+++ b/quiz/src/main/res/layout/item_answer_cloze.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@id/lnParent"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/margin_56"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_4"
     android:background="@drawable/rounded_white_shape"
     android:orientation="vertical">
@@ -11,6 +11,8 @@
         android:id="@id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_18"
+        android:layout_marginBottom="@dimen/margin_18"
         android:layout_marginStart="@dimen/margin_16"
         android:layout_marginEnd="@dimen/margin_16"
         android:layout_weight="1"
