--- a/quiz/src/main/res/layout/item_question_cloze.xml
+++ b/quiz/src/main/res/layout/item_question_cloze.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@id/lnTitle"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/margin_56"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_8"
         android:layout_marginRight="@dimen/margin_8"
         android:background="@drawable/rounded_white_shape">
@@ -19,9 +19,11 @@
             android:id="@id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_32"
-            android:layout_marginEnd="@dimen/margin_32"
+            android:layout_marginStart="@dimen/margin_24"
+            android:layout_marginEnd="@dimen/margin_24"
             android:layout_weight="1"
+            android:layout_marginBottom="@dimen/margin_16"
+            android:layout_marginTop="@dimen/margin_16"
             android:gravity="center_vertical"
             android:text="@string/correct"
             android:textColor="@color/color_blue_title_cloze"
