--- a/quiz/src/main/res/layout/item_result_answer.xml
+++ b/quiz/src/main/res/layout/item_result_answer.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/margin_56"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/margin_4"
     android:layout_marginBottom="@dimen/margin_4"
     android:orientation="vertical">
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@id/lnParent"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_56"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical|start"
         android:orientation="horizontal">
 
