--- a/quiz/src/main/res/values/dimens.xml
+++ b/quiz/src/main/res/values/dimens.xml
@@ -45,7 +45,7 @@
     <dimen name="line_spacing_extra_5">5sp</dimen>
     <dimen name="line_spacing_extra_4">4sp</dimen>
     <dimen name="margin_12">12dp</dimen>
-    <dimen name="margin_16">16sp</dimen>
+    <dimen name="margin_16">16dp</dimen>
     <dimen name="margin_1">1dp</dimen>
     <dimen name="margin_10">10dp</dimen>
     <dimen name="margin_150">150dp</dimen>
