update task 1- set loading design in request

--- a/quiz/src/main/res/values/ids.xml
+++ b/quiz/src/main/res/values/ids.xml
@@ -113,6 +113,7 @@
     <item name="imageView" type="id" />
     <item name="niceVideoPlayer" type="id" />
     <item name="videoView" type="id" />
+    <item name="lnLoading" type="id" />
 
 
 </resources>
