--- a/quiz/src/main/res/layout/question_image_layout.xml
+++ b/quiz/src/main/res/layout/question_image_layout.xml
@@ -6,18 +6,33 @@
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_white_shape"
     android:orientation="vertical"
-    android:visibility="visible">
+    android:visibility="gone">
 
-    <TextView
-        android:id="@id/txtTitleImage"
+    <LinearLayout
+        android:id="@id/lnTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="5"
-        android:padding="@dimen/margin_16"
-        android:scrollbars="vertical"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size_16"
-        android:textStyle="bold" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@id/txtTitleImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="5"
+            android:padding="@dimen/margin_16"
+            android:scrollbars="vertical"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_16"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_1"
+            android:background="@color/background"/>
+
+        <View
+            android:layout_width="@dimen/margin_1"
+            android:layout_height="@dimen/margin_8"/>
+    </LinearLayout>
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@id/imgQuestion"
