--- a/quiz/src/main/res/layout/question_video_layout.xml
+++ b/quiz/src/main/res/layout/question_video_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@id/cvQuestionVideo"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/margin_170"
+    android:layout_height="wrap_content"
     android:visibility="gone">
 
     <LinearLayout
@@ -11,10 +11,35 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:id="@id/lnTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@id/txtTitleImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="5"
+                android:padding="@dimen/margin_16"
+                android:scrollbars="vertical"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_16"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/margin_1"
+                android:background="@color/background"/>
+
+            <View
+                android:layout_width="@dimen/margin_1"
+                android:layout_height="@dimen/margin_8"/>
+        </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="@dimen/margin_170"
             android:background="#000000">
             <tcking.github.com.giraffeplayer2.VideoView
                 android:id="@id/viewVideoQuestion"
